--- a/src/components/alg/alg-conspect/sp/pages/elem-sp17.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp17.html
@@ -173,6 +173,17 @@
     <li>Где хранится ответ на задачу? Ответ хранится в ячейке DP[str1.size()][str2.size()].</li>
   </ol>
 
+<pre>
+           к ко кот коти котик
+        0  1  2  3   4    5
+к       1  0  1  2   3    4
+ко      2  1  0  1   2    3
+кор     3  2  1  1   2    3
+корж    4  3  2  2   2    3
+коржи   5  4  3  3   2    3
+коржик  6  5  4  4   3    2
+</pre>
+
   <h4>Реализация алгоритма Левенштейна</h4>
 <pre>
 string str1, str2;
@@ -246,6 +257,62 @@ cout &lt;&lt; DP[str1.size()][str2.size()];
   <h4>Пример 2</h4>
   <code>2</code>
   <code>670</code>
+
+  <h4>Пример 3</h4>
+  <code>3</code>
+  <code>55252</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>В задаче могут быть ведущие нули. Сначала найдем сумму цифр.Создадим массив DP, в DP[i][j] будем хранить количество чисел длиной j и с суммой i. В этом массиве будет 10n строк и n+1 столбцов. Реалицация цикл в цикле в цикле. Сложность O(N*10*N*10). Для каждого n-значного числа ответ хранится в последнем столбце.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  long long N;
+  cin >> N;
+
+  // решение
+  long long mod = 1'000'000'033;
+  vector&lt;vector&lt;long long&gt; &gt; DP(10*N, vector&lt;long long&gt;(N + 1));
+
+  // заполним базовый случай, первый столбик
+  for (int i = 0; i &lt; 10; i++) {
+    DP[i][1] = 1;
+  }
+
+  // посчитаем сумму цифр
+  for (int h = 2; h &lt;= N; h++) {
+    for (int i = 0; i &lt; 10 * N; i++) {
+      for (int k = 0; k &lt; 10; k++) {
+        if (k + i &lt; DP.size()) {
+          DP[k + i][h] = (DP[k + i][h] + DP[i][h - 1]) % mod;
+        }
+      }
+    }
+  }
+
+  // теперь посчитаем сколько счастливых чисел
+  long long sum = 0;
+  for (int i = 0; i &lt; DP.size(); i++) {
+    sum += (DP[i][N] * DP[i][N]) % mod;
+  }
+  sum = sum % mod;
+
+  // вывод результата
+  cout &lt;&lt; sum;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -341,7 +408,7 @@ cout &lt;&lt; DP[str1.size()][str2.size()];
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
-  <p>Отдых на море – это замечательно! Но вот программисту Паше ужасно скучно лежать на пляже в Турции. Настолько скучно, что Паша решил посчитать количество трехзначных простых чисел. Он так увлекся этим занятием, что начал изучать 3-простые числа. Так Паша называет числа, у которых любые 3 подряд идущие цифры образуют трехзначное простое число. Паша уже начал работу над теорией божественного происхождения таких чисел, когда какие-то хулиганы окатили Пашу холодной водой и стали кричать какие-то загадочные слова вроде «Sunstroke!», «Sonnenstich!» и «Colpo di sole!»</p>
+  <p>Отдых на море – это замечательно! Но вот программисту Паше ужасно скучно лежать на пляже в Турции. Настолько скучно, что Паша решил посчитать количество трехзначных простых чисел. Он так увлекся этим занятием, что начал изучать 3-простые числа. Так Паша называет числа, у которых <strong>любые 3 подряд идущие цифры</strong> образуют трехзначное простое число. Паша уже начал работу над теорией божественного происхождения таких чисел, когда какие-то хулиганы окатили Пашу холодной водой и стали кричать какие-то загадочные слова вроде «Sunstroke!», «Sonnenstich!» и «Colpo di sole!»</p>
 
   <h4>Входные данные</h4>
   <p>Ввод содержит целое число n (3 ≤ n ≤ 10000).</p>
@@ -356,6 +423,81 @@ cout &lt;&lt; DP[str1.size()][str2.size()];
   <h4>Пример 2</h4>
   <code>4</code>
   <code>204</code>
+
+  <h4>Пример 3</h4>
+  <code>5</code>
+  <code>374</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Будем собирать матрицу DP размером 1000 x n. Например, ячеке на строчке 177 и столбце 5 будет количество 3-простых чисел длиной в 5 цифр, которые заканчиваются на 117.</p>
+    <p>Это ответ на первый вопрос ДП - что мы храним? Храним массив в каждой ячейке DP[i][j] количество j-значных чисел, которые оканчиваются на число i.</p>
+    <p>Второй вопрос ДП - как считать? Когда переходим в столбец j+1 мы добавляем в конец к нашему числу новую цифру и должны проверить будут ли число из трех последних цифр простым.</p>
+    <p>Считаем слева направо, сверху вниз.</p>
+    <p>Базой будут все трехзначные числа. Если число простое, то ставим в ячейку 1, если нет - 0.</p>
+    <p>Ответ на задачу хранится в последнем столбце.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  int n;
+  cin >> n;
+
+  // решение
+  long long mod = 1'000'000'009;
+  vector&lt;int&gt; G(1000);
+
+  // соберем решето эратосфена для всех 3-значных цифр
+  for (int i = 100; i &lt; 1000; i++) {
+    int k = 0;
+    for (int j = 1; j &lt;= i; j++) {
+      if (i % j == 0) {
+        k++;
+      }
+    }
+    if (k == 2) {
+      G[i] = 1;
+    }
+  }
+  // заполним базовый случай, третий столбик
+  vector&lt;vector&lt;long long&gt; &gt; DP(1000, vector&lt;long long&gt;(n + 1));
+  for (int i = 0; i &lt; 1000; i++) {
+    DP[i][3] = G[i];
+  }
+
+  for (int i = 4; i &lt;= n; i++) {
+    for (int j = 100; j &lt; 1000; j++) {
+      for (int k = 0; k &lt; 10; k++) {
+        // три последние цифры нового числа
+        int tmp = j % 100 * 10 + k;
+        // если это простое число
+        if (G[tmp] == 1) {
+          DP[tmp][i] = (DP[tmp][i] + DP[j][i - 1]) % mod;
+        }
+      }
+    }
+  }
+
+  // собираем результат
+  long long res = 0;
+  for (int i = 100; i &lt; 1000; i++) {
+    res = (res + DP[i][n]) % mod;
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -463,6 +605,62 @@ cout &lt;&lt; DP[str1.size()][str2.size()];
   <h4>Пример 2</h4>
   <code>5 5 6</code>
   <code>3119</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Динамический объект. Соберем матрицу DP из n+1 столбцов и n*k + 1 строк. Каждый столбец это количество выстрелов от 0 до n. Каждая строка это набранные очки от 0 (никуда не попала) до n*k (все выстрелы попали в максимальное количество очков).</p>
+    <p>Что храним. В ячейке DP[i][j] храним количество способов которыми Ира может получить i очков за j выстрелов. Ставим 0 если невозможно получить i очков за j выстрелов.</p>
+    <p>Как считаем ячейку. Надо определить позиции из которых можно придти в ячейку DP[i][j] за один выстрел. Это столбик j-1. Это строки от i-1 до i-k.</p>
+    <p>База. Начинаем с DP[0][0]</p>
+    <p>Как оходить. Слева направо, сверху вниз.</p>
+    <p>Сложность O(n² * k²). Это количество ячеек n*(n*k), чтобы обойти каждую ячейку надо обойти еще k элементов. При наших входных параметрах это O(300⁴). Это плохо. Чтобы улучшить асимптотику, нужно мудро подойти к обходу матрицы. Между ячейками DP[i][j] и DP[i+1][j] огромное количество одинаковых элементов. Чтобы посчитать DP[i+1][j] нужно к результату DP[i][j] прибавить одну ячейку и убрать одну ячейку. Тогда сложность станет O(n*n*k).</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  long long n, k, p;
+  cin >> n >> k >> p;
+
+  // решение
+  long long mod = 1e9 + 7;
+  vector&lt;vector&lt;long long&gt; &gt; DP(n * k + 1, vector&lt;long long&gt;(n + 1));
+
+  // база
+  DP[0][0] = 1;
+
+  // обход по столбцам
+  // соберем префикс-сумму
+  for (int h = 1; h &lt;= n; h++) {
+    long long sum = 0;
+    for (int i = h; i &lt;= h * k; i++) {
+      sum += DP[i - 1][h - 1];
+      if (i - k - 1 >= 0) {
+        sum -= DP[i - k - 1][h - 1];
+      }
+      DP[i][h] = sum % mod;
+    }
+  }
+
+  // соберем позиции в которых Ира выигрывает
+  long long res = 0;
+  for (int i = p + 1; i &lt;= n * k; i++) {
+    res += DP[i][n];
+  }
+
+  // вывод результата
+  cout &lt;&lt; res % mod;
+}
+</pre>
+  </details>
 </article>
 
 
