--- a/src/components/code/code-c/c-books/pages/elem-book6.html
+++ b/src/components/code/code-c/c-books/pages/elem-book6.html
@@ -982,7 +982,7 @@ for (i = 0; i &lt; N; i++) {
 
 <!-- Глава 4 Управление -->
 <article class="article">
-  <div class="anchor" id="p4"></div>
+  <div class="anchor" id="p5"></div>
   <h3>Глава 4 Управление (53)</h3>
 
   <h4>4.1 Операторы и блоки (53)</h4>
@@ -1135,7 +1135,7 @@ itoa(char s[], int n) {
 
   <p>Конструкция do-while здесь нужна потому что в массиве должен быть хотя бы один символ.</p>
 
-  <h4>Break (разрыв) (61)</h4>
+  <h4>4.7 Break (разрыв) (61)</h4>
 
   <p>Оператор break обеспечивает выход из таких конструкций как while, dor, do-while и switch.</p>
 
@@ -1160,7 +1160,7 @@ main() {
 </pre>
   <p>Программа getline выдает размер строки. Внутренний цикл while начинается с последнего символа в line и идет просмотр строки в обратном направлении в поисках первого символа, который не есть пробел или табуляция.</p>
 
-  <h4>Continue (продолжение) (62)</h4>
+  <h4>4.8 Continue (продолжение) (62)</h4>
 
   <p>Оператор continue переходит к началу следующей итерации в конструкциях while, for, do-while.</p>
   <p>Напечатаем положительные числа, пропуская отрицательные в цикле.</p>
@@ -1172,5 +1172,487 @@ for (i = 0; i &lt; N; i++) {
   printf("%d ", a[i]);
 }
 </pre>
+
+  <h4>4.9 Переходы и метки (62)</h4>
+
+  <p>Переходы и метки это плохой стиль программирования. Их на практике не используют. Но это простой способ выйти из внутреннего цикла с большим уровнем вложенности.</p>
+  <p>Оператор перехода goto. Метку можно поставить перед любым оператором в той же функции, где находится оператор перехода на нее.</p>
+</article>
+
+
+<!-- Глава 5. Функции и структура программы -->
+<article class="article">
+  <div class="anchor" id="p6"></div>
+  <h3>Глава 5. Функции и структура программы (64)</h3>
+
+  <p>Программа может находиться в одном или нескольких файлах. В свои программы можно добавлять функции из библиотек.</p>
+
+  <h4>5.1 Основы (64)</h4>
+
+  <p>Если программу можно разбить на несколько частей, то лучше каждую часть вынести в отдельную функцию. С небольшими частями легче иметь дело, чем с одной большой программой. Кроме того, небольшие функции могут оказаться полезными и в других программах.</p>
+
+  <p>Напише еще один вариант функции getline() для поиска всех строчек, содержащих заданный шаблон.</p>
+<pre>
+#define MAXLINE 1000
+
+main() {
+  char line[MAXLINE];
+  while (getline(line, MAXLINE) > 0) {
+    if (index(line, "the") >= 0) {
+      printf("%s", line);
+    }
+  }
+}
+
+// записать строчку в s, вернуть длину
+getline(char s[], int lim) {
+  int c, i;
+  i = 0;
+  while (--lim > 0 && (c = getchar()) != EOF && c !='\n') {
+    s[i++] c;
+  }
+  if (c == '\n') {
+    s[i++] = c;
+  }
+  s[i] = '\0';
+  return i;
+}
+
+// выдать начало t в c
+index(char s[], char t[]) {
+  int i, j, k;
+  for (i = 0; s[i] != '\0'; i++) {
+    for (j=i, k=0; t[k] != '\0' && s[j] == t[k]; j++, k++) ;
+    if (t(k) == '0') {
+      return i;
+    }
+  }
+}
+</pre>
+
+  <p>Во входном файле функции идут в любом порядке, а программа может быть разделена на много файлов. Функцию разделять на несколько файлов нельзя. Передавать значение из функции надо через оператор return.</p>
+  <p>Предположим есть три функции в трех разных файлах main.c, getline.c, index.c. Запустим команду</p>
+  <code>gcc main.c getline.c, index.c</code>
+  <p>Эта команда транслирует эти три файла и создает объектные файлы main.o, getline.o, index.o и загружает их все в исполняемый файл a.exe. Если в одном файле встретилась ошибка, то его можно отредактировать и оттедльно затем транслировать.</p>
+
+  <h4>5.2 Функции, выдающие не целые значения (67)</h4>
+
+  <p>Если перед функцией не стоит тип возвращаемого значения, то по умолчанию функция возвращает целое число int.</p>
+
+  <p>Напишем функцию atof() преобразующую строку в число с плавающей точкой двойной точности.</p>
+<pre>
+double atof(char s[]) {
+  double val, power;
+  int i, sign;
+
+  // пропуск пустых символов
+  for (i = 0; s[i] == ' ' || s[i] == '\n' || s[i] == '\t'; i++) ;
+
+  // знак числа
+  sign = 1;
+  if (s[i] == '+' || s[i] == '-') {
+    sign = (s[i++] == '+') ? 1 : -1;
+  }
+
+  for (val = 0; s[i] >= '0' && s[i] &lt;= '9'; i++) {
+    val = 10 * val + s[i] - '0';
+  }
+  if (s[i] == '.') {
+    i++;
+  }
+  for (power = 1; s[i] >= '0' && s[i] &lt;= '9'; i++) {
+    val = 10 * val + s[i] - '0';
+    power *= 10;
+  }
+
+  return (sign * val / power);
+}
+</pre>
+
+  <p>Напишем программу, которая считывает по одному числу на строку, возможно со знаком, складывает их все и печатает после каждого ввода сумму.</p>
+<pre>
+#define MAXLINE 100
+
+// простейший калькулятор
+main() {
+  double sum, atof();
+  char line[MAXLINE];
+  sum = 0;
+
+  while (getline(line, MAXLINE) > 0) {
+    printf("\t%.2f\n", sum += atof(line));
+  }
+}
+</pre>
+
+  <p>Напишем функцию atoi() преобразующую строку в целое число. Внутри функции будем использовать готовую функцию atof() преобразующую строку в тип double. Поскольку функция atoi() имеет тип возвращаемого значения int, то ее результат автоматически будет приводиться к типу int.</p>
+<pre>
+int atoi(char s[]) {
+  double atof();
+  return atof(s);
+}
+</pre>
+
+  <h4>5.3 Дополнительные сведения об аргументах (69)</h4>
+
+  <p>Аргументы функции передаются по значению. При каждом вызове функция получает свою собственную, временную копию каждого аргумента. Функция не может изменять оригинальный аргумент в вызвавшей ее программе. Внутри функции каждый аргумент становится обычной локальной переменной.</p>
+  <p>Если функции передать имя массива, то передается адрес на начало массива, сами элементы не копируются. Функция может обращаться к оригинальным элементам, используя адрес на начало и сдвиг относительно этого адреса. Массив передается по ссылке, поэтому функция может воздействовать на элементы массива в основной программе.</p>
+  <p>Нет способа определить число элементов в массиве, если в функцию передается только его имя.</p>
+
+  <h4>5.4 Внешние переменные (69)</h4>
+
+  <p>Внешние переменные определены вне любой функции и доступны для многих функций. Все функции являются внешними, так как язык Си не позволяет определить функции внутри других функций.</p>
+  <p>Все внешни переменные являются так же и глобальлными. Но можно определить внешнюю переменную или функцию, чтобы она не была глобально доступной и к ней можно было бы обращаться только из одного единственного файла.</p>
+  <p>Внешние переменные можно использовать для передачи аргументов функции и для получения от них результата.</p>
+
+  <p>Напишем программу калькулятор. Программа будет допускать операции +, -, *, / и = для печати ответа. Для реализации будем использовать обратную польскую нотацию, а не традиционную инфиксную. При такой нотации каждая операция идет следом за своими операндами, например польская запись</p>
+  <code>1 2 - 4 5 + * =</code>
+  <p>означает обычную запись</p>
+  <code>(1 - 2) * (4 + 5) =</code>
+  <p>Реализация очень простая. Строка с записью разбирается посимольно. Символы и числа отделены друг от друга пробелами. Если пришел операнд, то он помещается в стек. Если пришла операция, из стека выбирается нужное число операндов (для бинарной операции - два), к ним применяется операция и результат вновь опускается в стек.</p>
+  <p>В нашем примере числа 1 и 2 помещаются в стек, затем к ним применяется операция минус и в стек помещается число -1. Следом в стек помещаются числа 4 и 5, затем к ним применяется операция плюс и в стек помещается число 9. В стеке остаются -1 и 9. Затем к ним применяется операция умножение и в стек помещается -9. Операция = печатает верхний элемент стека, не убирая его.</p>
+  <p>Структура программы</p>
+<pre>
+while (следующая операция или операнд это не конец файла) {
+  if (число) {
+    поместить число в стек
+  } else if (операция) {
+    достать из стека два числа
+    сделать операцию
+    поместить в стек результат
+  } else {
+    ошибка
+  }
+}
+</pre>
+
+  <p>При конструировании программы надо решить где находится стек. Стек и связанная с ним информация будут внешними переменными, доступными для функций push() и pop(), но не доступными для функции main(). Функции main() ничего не нужно знать о стеке, она должна лишь пользоваться функциями push() и pop().</p>
+
+  <h4>Программа калькулятор для польской записи (72)</h4>
+<pre>
+#define MAXOP      20
+#define NUMBER    '0'
+#define TOOBIG    '9'
+
+main() {
+  int type;
+  char s[MAXOP];
+  double op2, atof(), pop(), push();
+
+  while ((type = getop(s, MAXOP)) != EOF) {
+    switch (type) {
+      case NUMBER:
+        push(atof(s));
+        break;
+      case '+':
+        push(pop() + pop());
+        break;
+      case '*':
+        push(pop() * pop());
+        break;
+      case '-':
+        op2 = pop();
+        push(pop() - op2);
+        break;
+      case '/':
+        op2 = pop();
+        if (op2 != 0.0) {
+          push(pop() / op2);
+        } else {
+          printf("zero divisor popped\n");
+        }
+        break;
+        case '=':
+          printf("\t%f\n", push(pop()));
+          break;
+        case 'c':
+          clear();
+          break;
+        case TOOBIG:
+          printf("%.20s ... is too long\n", s);
+          break;
+        default:
+          printf("unknown command %c\n", type);
+          break;
+    }
+  }
+}
+
+// максимальная глубина стека
+#define MAXVAL 100
+// указатель стека
+int sp = 0;
+double val[MAXVAL];
+
+// поместить в стек
+double push(double f) {
+  if (sp &lt; MAXVAL) {
+    return (val[sp++] = f);
+  } else {
+    printf("error: stack full\n");
+    clear();
+    return 0;
+  }
+}
+
+// забрать из стека
+double pop() {
+  if (sp > 0) {
+    return val[--sp];
+  } else {
+    printf("error: stack empty\n");
+    clear;
+    return 0;
+  }
+}
+
+// очистить стек
+clear() {
+  sp = 0;
+}
+</pre>
+
+  <p>Для операций '+' и '*' порядок операндов не важен. Однако для '-' и '/' нужно следить где левый операнд а где правый. </p>
+
+  <h4>5.5 Правила областей действия (73)</h4>
+
+  <p>Функции и внешние переменные не обязательно хранить в одном файле и компилировать одновременно. Исходный текст программы можно хранить в нескольких файлах, а предварительно скомпилированные подпрограммы можно загружать из библиотеки.</p>
+  <p>Область действия имени это часть программы, в которой это имя определено. Для автоматической переменной, описанной в начале функции, областью действия будет вся функция. Переменные с одинаковым именем в разных функциях никак не связаны. Область действия аргументов в функциях такая же как и автоматических переменных.</p>
+  <p>Область действия внешней переменной от точки во входном файле, где она была описана и до конца файла.</p>
+  <p>Если нужно использовать внешнюю переменную, описанную в другом файле, то ее не описывают повторно, а ссылаются на нее с помощью слова extern.</p>
+  <p>При объявлении переменной, выделяется под нее память. А при ссылке на нее с помощью слова extern мы успокаиваем компилятор, говоря ему что такая переменная уже есть.</p>
+  <p>Переменные val и sp можно определить и инициировать в одном файле, а функции push, pop, clear определить в другом.</p>
+  <p>Файл 1</p>
+<pre>
+int sp = 0;
+double val[MAXVAL];
+</pre>
+  <p>Файл 2</p>
+<pre>
+extern int sp;
+extern double val[];
+double push(double f) {}
+double pop() {}
+clear() {}
+</pre>
+
+  <p>Напишем функцию getop(), которая выбирает следующий операнд или операцию. Она пропускает пробелы, символы табуляции и перехода на новую строку. Если следующий символ не цифра или десятичная точка, то он не выдается. Иначе набирается строка цифр, которая может включать десятичную точку, и выдается NUMBER - сигнал о том, что введено число. Если приходит слишком длинное число, то выдается сигнал переполнения TOOBIG.</p>
+<pre>
+getop(char s[], int lim) {
+  int i, c;
+  while ((c = getch()) == ' ' || c == '\t' || c == '\n') ;
+
+  if (c != '.' && (c &lt; '0' || c > '9')) {
+    return c;
+  }
+
+  s[0] = c;
+  for (i = 1; (c = getchar()) >= '0' && c &lt;= '9'; i++) {
+    if (i &lt; lim) {
+      s[i] = c;
+    }
+  }
+
+  // дробная часть
+  if (c == '.') {
+    if (i &lt; lim) {
+      s[i] = c;
+    }
+    for (i++; (c = getchar()) >= '0' && c &lt;= '9'; i++) {
+      if (i &lt; lim) {
+        s[i] = c;
+      }
+    }
+  }
+
+  // если число правильное
+  if (i &lt; lim) {
+    ungetch(c);
+    s[i] = '\0';
+    return(NUMBER);
+  // если число слишком длинное
+  } else {
+    // пропустить все до конца строки
+    while (c != '\n' && c != EOF) {
+      c = getchar();
+    }
+    s[lim - 1] = '\0';
+    return TOOBIG;
+  }
+}
+</pre>
+
+  <p>Функция getch() берет следующий символ из входного потока. Функция ungetch() возвращает символ обратно во входной поток так, что следующее обращение к getch() опять выдаст этот символ. Как это работает? Функция ungetch() сохраняет возвращаемые символы в некотором буфере - символьнгом массиве. Функция getch() сначала читает информацию из этого буфера, если она там есть. Если буфер пустой, то обращается к getchar() и забирает следующий символ из входного потока.</p>
+
+<pre>
+#define BUFSIZE 100
+
+// буфер для возврата символов
+char buf[BUFSIZE]
+
+// следующая свободная позиция в буфере
+int bufp = 0;
+
+// выдача возвращенного символа
+getch() {
+  return (bufp > 0) ? buf[--bufp] : getchar();
+}
+
+// возврат символа в буфер
+ungetch(int c) {
+  if (bufp > BUFSIZE) {
+    printf("ungetch: too many characters\n");
+  } else {
+    buf[bufp++] = c;
+  }
+}
+</pre>
+
+  <h4>5.6 Статические переменные (76)</h4>
+
+  <p>Статическая переменная объявляется со словом static и может быть внутренней или внешней.</p>
+  <p>Внутренние статические переменные локальны по отношению к отдельной функции, но они не возникают и не уничтожаются при каждом вызове функции, являясь постоянной памятью для функции.</p>
+  <p>Внешние статические переменные видны только ниже их объявления в том файле где они объявлены и не видны в других файлах. Их имена не конфликтует с именами внешних переменных из других файлов.</p>
+  <p>Функции являются внешними и их имена известны везде, однако можно объявить функцию как статическую и она будет видна только внутри файла, где она объявлена.</p>
+
+  <h4>5.7 Регистровые переменные (77)</h4>
+
+  <p>Если переменную объявить со словом register, то компилятор будет знать, что переменная будет часто использоваться и ее можно поместить в регистр машины. На практике в регистрах можно хранить только небольшое число переменных, поэтому компилятор сам решает хранить переменную в регистре или нет. Для регистровой переменной невозможна операция & взятия адреса.</p>
+  <p>Со словом register можно объявить только автоматическую переменную или параметр функции.</p>
+
+  <h4>5.8 Блочная структура (78)</h4>
+
+  <p>Язык Си не относится к языкам с блочной структурой. Нельзя определять функцию внутри другой функции. Однако переменные можно определять как и в блочных языках. Если переменная объявлена внутри блока, ограниченного фигурными скобками, то в этом блоке она затеняет все другие переменные с таким же именем.</p>
+
+  <h4>5.9 Инициация (78)</h4>
+
+  <p>Если при объявлении переменной не происходит ее инициализация, то гарантируется, что внешние и статичкеские переменные будут иметь значение ноль, а автоматические и регистровые переменные будут содержать мусор (то что осталось в ячейках памяти от других программ).</p>
+  <p>Простые переменные (не массивы или записи) можно инициировать при их определении, если постваить знак равенства и константное выражение</p>
+  <code>int x = 1;</code>
+  <code>char letter = 'a';</code>
+  <p>Внешние и статические переменные инициируются только один раз по время компиляции.</p>
+  <p>Автоматические и регистровые переменные инициируются при каждом входе в функцию или блок. Они могут инициироваться не только константами, можно использовать любые выражения, даже вызов функции.</p>
+  <p>Автоматические массивы инициировать нельзя. Внешние и статические массивы можно инициировать, поместив в описании список значений через запятую в фигурных скобках.</p>
+  <code>int digits[10] = {0,1,2,3,4,5,6,7,8,9};</code>
+  <p>Если инициирующих значений меньше чем размер массива, то остальные элементы получают нулевые значения.</p>
+  <p>Для символьных массивов существует специальный способ инициации</p>
+  <code>char s[] = "the";</code>
+  <code>char s[] = {'t', 'h', 'e', '\0'};</code>
+  <p>Если не указать размер массива при инициации, то его длина равна числу инициирующих значений. В последнем случае длина равна 4.</p>
+
+  <h4>5.10 Рекурсия (80)</h4>
+
+  <p>Рекурсивная функция обращается сама к себе. Например напечатать числа как последовательность символов. Младшие разряды числа получаются раньше старших, а печататься должны в обратном порядке.</p>
+  <p>Первый способ. Сохраним цифры в массиве и распечатаем массив в обратном порядке.</p>
+<pre>
+printd(int n) {
+  char s[10];
+  int i;
+  if (n &lt; 0) {
+    putchar('-';
+    n = -n;)
+  }
+  i = 0;
+  do {
+    s[i++] = n % 10 + '0';
+  } while ((n /= 10) > 0);
+
+  while (--i >= 0) {
+    putchar(s[i]);
+  }
+}
+</pre>
+
+  <p>Второй способ. Рекурсивный. При каждом обращении к функции printd() она сначала обращается к себе, чтобы напечатать начальные цифры, а затем печатает замыкающую цифру.</p>
+<pre>
+printd(int n) {
+  int i;
+
+  if (n &lt; 0) {
+    putchar('0');
+    n = -n;
+  }
+  if ((i = n / 10) != 0) {
+    printd(i);
+  }
+  putchar(n % 10+ '0');
+}
+</pre>
+
+  <p>Рекурсия не предусматривает защиту памяти, поэтому стек вызовов может переполняться. Однако рекурсивные программы более компактные и их легче писать и понимать.</p>
+
+  <h4>5.11 Препроцессор для Си (81)</h4>
+
+  <p>Конструкция</p>
+  <code>#include "file"</code>
+  <p>заменяется содержимым файла с указанным именем.</p>
+
+  <p>Конструкция</p>
+  <code>#define true 1</code>
+  <p>Заменяет все имена true на 1.</p>
+  <p>Если конструкция #define не умещается на одну строку, ее можно разбить на несколько строк, ставя в конце строки символ '\'.</p>
+
+  <p>Можно определить макроподстановку с аргументами</p>
+  <code>#define max(A, B) ((A) > (B) ? (A) : (B)</code>
+
+  <p>После такого определения, везде в программе функция max будет заменена на ее тело.</p>
+</article>
+
+
+<!-- Глава 6. Ссылки и массивы -->
+<article class="article">
+  <div class="anchor" id="p7"></div>
+  <h3>Глава 6. Ссылки и массивы (84)</h3>
+
+  <p>Ссылка представляет собою переменную, содержащую адрес другой переменной. С помощью ссылок получаются более компактные и эффективные программы.</p>
+
+  <h4>6.1 Ссылки и массивы (84)</h4>
+
+  <p>Ссылка содержит адрес объекта, поэтому возможно косвенное обращение к объекту через ссылку.</p>
+<pre>
+int x, y;
+int *px;
+px = &x;
+y = *px;
+</pre>
+  <p>В указателе px будет записан адрес переменной x.</p>
+  <p>Операцию & взятия адреса можно применить только к переменным и элементам массива.</p>
+  <p>В переменной y будет записано содержимое, по адресу px, то есть значение y будет равно значению x.</p>
+  <p>Операция * разименования применяется к указателю и возвращает значение по адресу, на который указывает указатель.</p>
+</article>
+
+
+<!-- Глава 7. Записи -->
+<article class="article">
+  <div class="anchor" id="p8"></div>
+  <h3>Глава 7. Записи (108)</h3>
+</article>
+
+
+<!-- Глава 8. Ввод и вывод -->
+<article class="article">
+  <div class="anchor" id="p9"></div>
+  <h3>Глава 8. Ввод и вывод (129)</h3>
+</article>
+
+
+<!-- Глава 9. Взаимодействие с системой UNIX -->
+<article class="article">
+  <div class="anchor" id="p10"></div>
+  <h3>Глава 9. Взаимодействие с системой UNIX (142)</h3>
+</article>
+
+
+<!-- Справочное руководство по языку Си -->
+<article class="article">
+  <div class="anchor" id="p11"></div>
+  <h3>Справочное руководство по языку Си (157)</h3>
+</article>
+
+
+<!-- Задачи по языку Си -->
+<article class="article">
+  <div class="anchor" id="p12"></div>
+  <h3>Задачи по языку Си (157)</h3>
 </article>
 
